Fixed x overflow on widget manager added opening and closing transition of the widget manager

--- a/Dashboard/client/css/builder.css
+++ b/Dashboard/client/css/builder.css
@@ -63,11 +63,16 @@
     width:100%;
     height:100%;
     opacity:.98;
-    top:0;
+    /*top:0;*/
+    top: 100vh;
     left:0;
-    display:none;
+    /*display:none;*/
     position:fixed;
     background-color:#313131;
+
+    -webkit-transition: top 0.3s ease-out;
+    -moz-transition: top 0.3s ease-out;
+    transition: top 0.3s ease-out;
 }
 
 .builder_title {
